rust/macros/tests/invalid/target/debug/deps/triple_arguments-28c69c8fea91ca0c.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/triple_arguments-28c69c8fea91ca0c.d: triple_arguments.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libtriple_arguments-28c69c8fea91ca0c.rmeta: triple_arguments.rs Cargo.toml

triple_arguments.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
